Fix bug for site-header in RTL on small screens
The title and the description is aligned to the left as the LTR websites causing the text to be behind the profile image. The image now on the left and the text on the right.

--- a/css/rtl-style.css
+++ b/css/rtl-style.css
@@ -2748,7 +2748,7 @@ table th {
 
 	.site-header,
 	.single-column-layout .site-header {
-		text-align: left;
+		text-align: right;
 	}
 
 	.site-main article.sticky {
